--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
+    <string name="hello_blank_fragment">Hello Blank Fragment</string>
     <string name="app_name">License_test</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="question_count">%s / 20</string>
+    <string name="user_score">"획득점수: %d점"</string>
 </resources>
